externalized settings ui

--- a/SRAYSScoreboard/App.config
+++ b/SRAYSScoreboard/App.config
@@ -16,6 +16,30 @@
             <setting name="TextColor" serializeAs="String">
                 <value>HotTrack</value>
             </setting>
+            <setting name="HeaderLabelsColor" serializeAs="String">
+                <value>HotTrack</value>
+            </setting>
+            <setting name="ColumnHeadersColor" serializeAs="String">
+                <value>HotTrack</value>
+            </setting>
+            <setting name="NameLabelsColor" serializeAs="String">
+                <value>LightSteelBlue</value>
+            </setting>
+            <setting name="TimeLabelsColor" serializeAs="String">
+                <value>LightSteelBlue</value>
+            </setting>
+            <setting name="PlaceLabelsColor" serializeAs="String">
+                <value>LightSteelBlue</value>
+            </setting>
+            <setting name="LaneLabelsColor" serializeAs="String">
+                <value>LightSteelBlue</value>
+            </setting>
+            <setting name="PoolLaneCount" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="COMPort" serializeAs="String">
+                <value>COM5</value>
+            </setting>
         </SRAYSScoreboard.Properties.Settings>
     </userSettings>
 </configuration>
