Add lane numbering feature and fix compiler issues
- Added option to switch between standard lane numbering (1-10) and alternative lane numbering (0-9)
- Fixed CS0649 compiler issues:
  - Added UseLaneNumberingZeroToNine setting to App.config
  - Added missing field declarations in Settings.Designer.cs
- Updated documentation in README.md, CUSTOMIZATION.md, and ARCHITECTURE.md to reflect the new feature
- Ensured OBS interface properly inherits lane numbering settings

--- a/SRAYSScoreboard/App.config
+++ b/SRAYSScoreboard/App.config
@@ -40,6 +40,9 @@
             <setting name="COMPort" serializeAs="String">
                 <value>COM5</value>
             </setting>
+            <setting name="UseLaneNumberingZeroToNine" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SRAYSScoreboard.Properties.Settings>
     </userSettings>
 </configuration>
