--- a/SRAYSScoreboard/Properties/Settings.settings
+++ b/SRAYSScoreboard/Properties/Settings.settings
@@ -34,5 +34,8 @@
     <Setting Name="PoolLaneCount" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="UseLaneNumberingZeroToNine" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
