Enhance UI and improve user experience with automatic COM port selection and screen saver features

--- a/SRAYSScoreboard/App.config
+++ b/SRAYSScoreboard/App.config
@@ -43,6 +43,33 @@
             <setting name="UseLaneNumberingZeroToNine" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ScreenSaverDisplayOption" serializeAs="String">
+                <value>AsciiArt</value>
+            </setting>
+            <setting name="ScreenSaverInactivityMinutes" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="ScreenSaverManualActivation" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ScreenSaverExitOnData" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ScreenSaverExitOnKeyPress" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ScreenSaverLogoPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ScreenSaverScrollingMessage" serializeAs="String">
+                <value>Welcome to Silver Rays Swim Club</value>
+            </setting>
+            <setting name="ScreenSaverBackgroundColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="ScreenSaverExitOnMouseMove" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SRAYSScoreboard.Properties.Settings>
     </userSettings>
 </configuration>
